--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.0.0
   firebase_auth: ^3.6.4
+  accordion: ^2.5.1
 
 dev_dependencies:
   flutter_test:
