--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^3.6.4
   accordion: ^2.5.1
   flutter_launcher_icons: ^0.10.0
+  pie_chart: ^3.1.1
 
 flutter_icons:
   android: "launcher_icon"
